--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 .banner {
-  background: url(../images/divlogo.png) no-repeat;
+  background: url(../images/logo_lines.svg) no-repeat;
   background-size: 100%;
   background-color: #010120;
   padding: 24px;
@@ -66,18 +66,13 @@
 }
 
 .banner-mobile .banner-mobile__logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  max-width: 680px;
-  width: 90%;
   padding: 40px;
 }
 
 .banner-mobile .banner-mobile__logo img {
   -webkit-animation: big_small alternate infinite ease-in-out .5s;
           animation: big_small alternate infinite ease-in-out .5s;
-  width: 100%;
+  max-width: 100%;
 }
 
 .banner-mobile .banner-mobile__description {
@@ -197,8 +192,8 @@
             transform: scale(1);
   }
   100% {
-    -webkit-transform: scale(1.3);
-            transform: scale(1.3);
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
   }
 }
 
@@ -208,8 +203,8 @@
             transform: scale(1);
   }
   100% {
-    -webkit-transform: scale(1.3);
-            transform: scale(1.3);
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
   }
 }
 
@@ -371,8 +366,9 @@
 }
 
 .banner-mobile-about {
+  padding: 30px;
   height: 100vh;
-  text-align: center;
+  text-align: left;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -585,8 +581,12 @@
   font-family: 'Montserrat', sans-serif;
   color: #FFFFFF;
   text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
-  padding: 30px 30px 30px 30px;
-  font-size: 10px;
+  padding: 15px 15px 15px 15px;
+  font-size: 15px;
+}
+
+.large {
+  font-size: 12px;
 }
 
 .front {
@@ -639,8 +639,12 @@ details summary {
   /* удалить обводку при фокусе */
   cursor: pointer;
   border: 3px solid #FFFFFF;
-  -webkit-box-shadow: 0px 0px 12px 3px rgba(139, 17, 215, 0.78);
-          box-shadow: 0px 0px 12px 3px rgba(139, 17, 215, 0.78);
+  -webkit-box-shadow: 0px 0px 12px 2px rgba(199, 121, 248, 0.78);
+          box-shadow: 0px 0px 12px 2px rgba(199, 121, 248, 0.78);
+  border-left-color: rgba(199, 121, 248, 0.78);
+  border-right-color: rgba(199, 121, 248, 0.78);
+  border-bottom-color: rgba(199, 121, 248, 0.78);
+  border-top-color: rgba(199, 121, 248, 0.78);
   padding: 1%;
 }
 
@@ -669,7 +673,7 @@ details summary::-webkit-details-marker {
 
 .faq {
   background-color: #010120;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 34px;
   color: #FFFFFF;
   text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
@@ -679,15 +683,22 @@ details summary::-webkit-details-marker {
 
 .answer {
   border: 3px solid #FFFFFF;
-  -webkit-box-shadow: 0px 0px 12px 3px rgba(139, 17, 215, 0.78);
-          box-shadow: 0px 0px 12px 3px rgba(139, 17, 215, 0.78);
+  -webkit-box-shadow: 0px 0px 12px 2px rgba(199, 121, 248, 0.78);
+          box-shadow: 0px 0px 12px 2px rgba(199, 121, 248, 0.78);
   padding: 1%;
   border-top: none;
+  border-left-color: rgba(199, 121, 248, 0.78);
+  border-right-color: rgba(199, 121, 248, 0.78);
+  border-bottom-color: rgba(199, 121, 248, 0.78);
   font-size: 16px;
+  background: rgba(214, 86, 226, 0.49);
 }
 
 .non-brd {
   border-top: none;
+  border-left-color: rgba(199, 121, 248, 0.78);
+  border-right-color: rgba(199, 121, 248, 0.78);
+  border-bottom-color: rgba(199, 121, 248, 0.78);
 }
 
 .last-year {
@@ -753,7 +764,7 @@ details summary::-webkit-details-marker {
 }
 
 .partners .partner-logo img {
-  max-width: 100%;
+  max-width: 198px;
   width: auto;
   height: auto;
 }
@@ -811,7 +822,6 @@ details summary::-webkit-details-marker {
           align-items: center;
   margin: 30px;
   -webkit-transition: 0.5s;
-  transition: 0.5s;
   background: #010120;
   text-align: center;
 }
@@ -829,7 +839,6 @@ details summary::-webkit-details-marker {
   max-width: 100%;
   opacity: .3;
   -webkit-transition: 0.5s;
-  transition: 0.5s;
 }
 
 .box .imgBx span {
@@ -844,14 +853,12 @@ details summary::-webkit-details-marker {
 
 .box:hover .imgBx span {
   -webkit-transition: .5s;
-  transition: .5s;
   -webkit-transition-delay: .3s;
-          transition-delay: .3s;
   opacity: 0;
 }
 
 .box:hover {
-  height: 310px;
+  height: 280px;
 }
 
 .box:hover .imgBx img {
@@ -879,7 +886,6 @@ details summary::-webkit-details-marker {
   background: #fff;
   z-index: -2;
   -webkit-filter: blur(10px);
-          filter: blur(10px);
 }
 
 .box:before,
@@ -890,7 +896,7 @@ details summary::-webkit-details-marker {
 .box .content-later {
   position: absolute;
   bottom: 0;
-  height: 120px;
+  height: 100px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -899,13 +905,20 @@ details summary::-webkit-details-marker {
           justify-content: center;
   opacity: 0;
   -webkit-transition: 0.5s;
-  transition: 0.5s;
   text-align: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  font-size: 18px;
+  font-size: 16px;
+  color: #FFFFFF;
+  text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
+  font-family: 'Montserrat', sans-serif;
+  width: 190px;
+}
+
+.organizers_mail {
+  text-decoration: none;
   color: #FFFFFF;
   text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
   font-family: 'Montserrat', sans-serif;
@@ -916,6 +929,10 @@ details summary::-webkit-details-marker {
 }
 
 .smaller {
+  font-size: 10px;
+}
+
+.smaller-bit {
   font-size: 13px;
 }
 
@@ -925,10 +942,20 @@ details summary::-webkit-details-marker {
   left: 10px;
   right: 10px;
   bottom: 10px;
-  height: 100px;
+  height: 170px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   opacity: 1;
   -webkit-transition: 0.5s;
-  transition: 0.5s;
   text-align: center;
   font-size: 20px;
   line-height: 34px;
@@ -947,6 +974,10 @@ details summary::-webkit-details-marker {
   font-weight: 500;
   line-height: 20px;
   letter-spacing: 1px;
+}
+
+.organizers-mobile {
+  background-color: #010120;
 }
 
 .probest {
@@ -975,12 +1006,14 @@ details summary::-webkit-details-marker {
 
 .who-we-are img {
   width: 100%;
-  -webkit-box-shadow: 0px 0px 12px 3px #C112FF;
-          box-shadow: 0px 0px 12px 3px #C112FF;
+  -webkit-box-shadow: 0px 0px 12px 3px #C101FF;
+          box-shadow: 0px 0px 12px 3px #C101FF;
+  padding: 20px;
+  background-color: black;
 }
 
 .register-box {
-  background: rgba(180, 107, 225, 0.49);
+  background: rgba(214, 86, 226, 0.49);
   -webkit-box-shadow: 0px 0px 20px 9px rgba(180, 107, 225, 0.78);
           box-shadow: 0px 0px 20px 9px rgba(180, 107, 225, 0.78);
   padding: 30px;
@@ -1005,13 +1038,11 @@ details summary::-webkit-details-marker {
   display: -ms-flexbox;
   display: flex;
   border: .5px solid;
-  border-color: rgba(180, 107, 225, 0.49);
+  border-color: rgba(194, 83, 185, 0.49);
   -webkit-box-shadow: none;
           box-shadow: none;
   font-family: 'Montserrat', sans-serif;
   font-style: normal;
-  position: -webkit-sticky;
-  position: sticky;
   padding: 10px;
   color: #FFFFFF;
   text-transform: uppercase;
@@ -1032,10 +1063,11 @@ details summary::-webkit-details-marker {
 
 footer {
   background-color: #010120;
+  padding-bottom: 30px;
 }
 
 footer img {
-  max-width: 15%;
+  max-width: 12%;
   margin: 5px;
 }
 
@@ -1045,7 +1077,7 @@ footer a {
   font-style: normal;
   font-weight: 500;
   color: #FFFFFF;
-  font-size: 24px;
+  font-size: 16px;
   text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
 }
 
@@ -1055,7 +1087,27 @@ footer a:hover {
   font-style: normal;
   font-weight: 500;
   color: #FFFFFF;
-  font-size: 24px;
+  font-size: 16px;
+}
+
+.task {
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  color: #FFFFFF;
+  font-size: 2vw;
+  text-shadow: 0px 0px 12px rgba(139, 17, 215, 0.78);
+}
+
+.task:hover {
+  text-decoration: none;
+  color: #8b11d7;
+  text-shadow: 0px 0px 20px rgba(139, 17, 215, 0.78);
+}
+
+.no-gutter > [class*='col'] {
+  padding-right: 0;
+  padding-left: 0;
 }
 
 @media only screen and (max-width: 1439px) {
@@ -1066,6 +1118,31 @@ footer a:hover {
   .banner__info__dates,
   .banner__info__place {
     font-size: 30px;
+  }
+  .organizers-1,
+  .organizers-2 {
+    padding-left: 12%;
+    padding-right: 12%;
+  }
+}
+
+@media only screen and (min-width: 1369px) {
+  .pageBenefits {
+    padding-left: 22%;
+    padding-right: 22%;
+  }
+}
+
+@media only screen and (max-width: 1368px) {
+  .organizers-1,
+  .organizers-2 {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .pageBenefits {
+    padding-left: 15%;
+    padding-right: 15%;
   }
 }
 
@@ -1078,27 +1155,197 @@ footer a:hover {
   .banner__info__place {
     font-size: 20px;
   }
+  .organizers-1,
+  .organizers-2 {
+    padding: 0;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .pageBenefits {
+    padding-left: 10%;
+    padding-right: 10%;
+  }
 }
 
 @media only screen and (max-width: 767px) {
-  .banner {
+  .banner,
+  .how .desk {
     display: none;
+  }
+  .how {
+    text-align: center;
+  }
+  .cat-img img {
+    width: 100%;
+    margin-top: 0;
+  }
+  .how .desk {
+    width: 100%;
+  }
+  .task {
+    font-size: 16px;
+  }
+  .pageBenefits {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .categories__container {
+    width: 100%;
+    font-size: 16px;
+  }
+  .last-year {
+    font-size: 20px;
+    padding-bottom: 16%;
+  }
+  .last-year p {
+    padding-top: 10%;
   }
   .head {
     font-size: 30px;
   }
   .organizers-1,
   .organizers-2 {
+    display: none;
+  }
+  .register-box {
+    text-align: center;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+  }
+  .register-box span {
+    padding-bottom: 30px;
   }
 }
 
 @media only screen and (min-width: 767px) {
   .banner-mobile,
-  .banner-mobile-about {
+  .banner-mobile-about,
+  .how .mob,
+  .organizers-mobile {
     display: none;
   }
+}
+
+#loader-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+}
+
+#loader {
+  display: block;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  width: 150px;
+  height: 150px;
+  margin: -75px 0 0 -75px;
+  border: 3px solid transparent;
+  border-top-color: white;
+  border-radius: 100%;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+  z-index: 1001;
+}
+
+#loader:before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  right: 5px;
+  bottom: 5px;
+  border: 3px solid transparent;
+  border-top-color: yellow;
+  border-radius: 100%;
+  -webkit-animation: spin 3s linear infinite;
+  animation: spin 3s linear infinite;
+}
+
+#loader:after {
+  content: "";
+  position: absolute;
+  top: 12px;
+  left: 12px;
+  right: 12px;
+  bottom: 12px;
+  border: 3px solid transparent;
+  border-top-color: orange;
+  border-radius: 100%;
+  -webkit-animation: spin 1.5s linear infinite;
+  animation: spin 1.5s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+#loader-wrapper .loader-section {
+  position: fixed;
+  top: 0;
+  background: #333;
+  width: 51%;
+  height: 100%;
+  z-index: 1000;
+}
+
+#loader-wrapper .loader-section.section-left {
+  left: 0;
+}
+
+#loader-wrapper .loader-section.section-right {
+  right: 0;
+}
+
+/* Loaded Styles */
+.loaded #loader-wrapper .loader-section.section-left {
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+  -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+.loaded #loader-wrapper .loader-section.section-right {
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+.loaded #loader {
+  opacity: 0;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+
+.loaded #loader-wrapper {
+  visibility: hidden;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  -webkit-transition: all 0.3s 1s ease-out;
+  transition: all 0.3s 1s ease-out;
 }
 /*# sourceMappingURL=style.css.map */
