--- a/css/style.css
+++ b/css/style.css
@@ -592,8 +592,15 @@
   font-style: normal;
   font-weight: 500;
   color: #FFFFFF;
-  text-align: left;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-size: 60px;
+  margin: 0 auto;
 }
 
 .banner-mobile-about__hackathon {
