--- a/style.scss
+++ b/style.scss
@@ -433,8 +433,11 @@
      font-style: normal;
      font-weight: 500;
      color: #FFFFFF;
-     text-align: left;
+     text-align: center;
+     display: flex;
+     justify-content: center;
      font-size: 60px;
+     margin: 0 auto;
  }
  
  .banner-mobile-about__hackathon {
